[tool.poetry]
name = "scraper"
version = "0.1.0"
description = ""
authors = ["Christian Q. Cleofas <cleofastiano27@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^3.2"
selenium = "^4.17.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
